# geophysics-data-reverse-engineering

./: README.md  pyproject.toml
geodatarev/: __init__.py  __main__.py  analyzer.py  cli.py  cloud_storage.py  config.py  disambiguate.py  float_formats.py  gdal_compat.py  identifier.py  scanner.py
geodatarev/configs/: default_formats.yaml
geodatarev/parsers/: __init__.py  encom.py  ermapper.py  geosoft.py  surfer6.py  surfer7.py  zmap.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_cloud_storage.py  test_config.py  test_float_formats.py  test_gdal_compat.py  test_identifier.py  test_parsers.py  test_scanner.py
