[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geodatarev"
version = "0.1.0"
description = "A framework for analysing and reverse engineering legacy binary geophysics data formats"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
geodatarev = "geodatarev.cli:main"

[tool.setuptools.packages.find]
include = ["geodatarev*"]

[tool.setuptools.package-data]
geodatarev = ["configs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
